// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Deposit overview renders automatic deposit correctly 1`] = `
<div>
  <div
    class="wcpay-deposit-overview"
  >
    <div
      class="components-surface components-card wcpay-deposit-automatic css-nsno0f-View-Surface-getBorders-primary-Card-rounded em57xhy0"
      data-wp-c16t="true"
      data-wp-component="Card"
    >
      <div
        class="css-mgwsf4-View-Content em57xhy0"
      >
        <ul>
          <li
            class="woocommerce-summary__item-container"
          >
            <div
              class="woocommerce-summary__item"
            >
              <div
                class="woocommerce-summary__item-label"
              >
                Deposit date: Jan 2, 2020
              </div>
              <div
                class="woocommerce-summary__item-data"
              >
                <div
                  class="woocommerce-summary__item-value"
                >
                  <div
                    class="woocommerce-order-status"
                  >
                    <span
                      class="woocommerce-order-status__indicator is-paid"
                    />
                    Paid
                  </div>
                </div>
              </div>
              <div
                class="wcpay-summary__item-detail"
              >
                MOCK BANK •••• 1234 (USD)
              </div>
            </div>
          </li>
          <li
            class="wcpay-deposit-amount"
          >
            $20.00
          </li>
        </ul>
      </div>
      <div
        aria-hidden="true"
        class="components-elevation css-91yjwm-View-Elevation-sx-Base-elevationClassName em57xhy0"
        data-wp-c16t="true"
        data-wp-component="Elevation"
      />
      <div
        aria-hidden="true"
        class="components-elevation css-91yjwm-View-Elevation-sx-Base-elevationClassName em57xhy0"
        data-wp-c16t="true"
        data-wp-component="Elevation"
      />
    </div>
  </div>
</div>
`;

exports[`Deposit overview renders instant deposit correctly 1`] = `
<div>
  <div
    class="wcpay-deposit-overview"
  >
    <div
      aria-describedby="woocommerce-summary-helptext-1"
      aria-label="Deposit overview"
      aria-orientation="horizontal"
      role="menu"
    >
      <p
        class="screen-reader-text"
        id="woocommerce-summary-helptext-1"
      >
        List of data points available for filtering. Use arrow keys to cycle through the list. Click a data point for a detailed report.
      </p>
      <ul
        class="woocommerce-summary has-4-items"
      >
        <li
          class="woocommerce-summary__item-container"
        >
          <div
            class="woocommerce-summary__item"
          >
            <div
              class="woocommerce-summary__item-label"
            >
              Instant deposit date: Jan 2, 2020
            </div>
            <div
              class="woocommerce-summary__item-data"
            >
              <div
                class="woocommerce-summary__item-value"
              >
                <div
                  class="woocommerce-order-status"
                >
                  <span
                    class="woocommerce-order-status__indicator is-paid"
                  />
                  Paid
                </div>
              </div>
            </div>
            <div
              class="wcpay-summary__item-detail"
            >
              MOCK BANK •••• 1234 (USD)
            </div>
          </div>
        </li>
        <li
          class="woocommerce-summary__item-container"
        >
          <div
            class="woocommerce-summary__item"
          >
            <div
              class="woocommerce-summary__item-label"
            >
              Deposit amount
            </div>
            <div
              class="woocommerce-summary__item-data"
            >
              <div
                class="woocommerce-summary__item-value"
              >
                $20.30
              </div>
            </div>
          </div>
        </li>
        <li
          class="woocommerce-summary__item-container"
        >
          <div
            class="woocommerce-summary__item"
          >
            <div
              class="woocommerce-summary__item-label"
            >
              1.5% service fee
            </div>
            <div
              class="woocommerce-summary__item-data"
            >
              <div
                class="woocommerce-summary__item-value wcpay-deposit-fee"
              >
                $0.30
              </div>
            </div>
          </div>
        </li>
        <li
          class="woocommerce-summary__item-container"
        >
          <div
            class="woocommerce-summary__item"
          >
            <div
              class="woocommerce-summary__item-label"
            >
              Net deposit amount
            </div>
            <div
              class="woocommerce-summary__item-data"
            >
              <div
                class="woocommerce-summary__item-value wcpay-deposit-net"
              >
                $20.00
              </div>
            </div>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Deposit overview renders notice when deposit data is not found 1`] = `
<div>
  <div
    class="wcpay-inline-notice wcpay-inline-error-notice components-notice is-error"
  >
    <div
      class="components-notice__content"
    >
      <div
        class="components-flex css-bmzg3m-View-Flex-sx-Base-sx-Items-ItemsRow em57xhy0"
        data-wp-c16t="true"
        data-wp-component="Flex"
      >
        <div
          class="components-flex-item wcpay-inline-notice__icon wcpay-inline-error-notice__icon css-mw3lhz-View-Item-sx-Base em57xhy0"
          data-wp-c16t="true"
          data-wp-component="FlexItem"
        >
          <svg
            class="gridicon gridicons-notice-outline"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g>
              <path
                d="M12 4c4.411 0 8 3.589 8 8s-3.589 8-8 8-8-3.589-8-8 3.589-8 8-8m0-2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10S17.523 2 12 2zm1 13h-2v2h2v-2zm-2-2h2l.5-6h-3l.5 6z"
              />
            </g>
          </svg>
        </div>
        <div
          class="components-flex-item wcpay-inline-notice__content wcpay-inline-error-notice__content css-mw3lhz-View-Item-sx-Base em57xhy0"
          data-wp-c16t="true"
          data-wp-component="FlexItem"
        >
          The deposit you are looking for cannot be found.
        </div>
      </div>
      <div
        class="components-notice__actions"
      />
    </div>
  </div>
</div>
`;
